fix(ui): correct spacing

--- a/src/sidebar/sidebar.scss
+++ b/src/sidebar/sidebar.scss
@@ -154,7 +154,7 @@ h2.cat-heading {
 .comp-item {
   padding-block: .35em;
 
-  & .checkbox {
+  & .checkbox, .icon {
     margin-right: .2em;
   }
 
